# adventofcode-2021

fsharp/: day01.fsx  day02.fsx  day03.fsx  day04.fsx  day05.fsx  day06.fsx
haskell/: aoc2021.cabal
haskell/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs
javascript/: day01.js  package.json
purescript/: package-lock.json  package.json  spago.dhall
purescript/src/: Day01.purs  Day02.purs  Utils.purs
