cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable day02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable day03
    main-is:          Day03.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable day04
    main-is:          Day04.hs
    build-depends:    base ^>=4.14.3.0
                    , split
    hs-source-dirs:   app
    default-language: Haskell2010

executable day05
    main-is:          Day05.hs
    build-depends:    base ^>=4.14.3.0
                    , split
                    , containers
    hs-source-dirs:   app
    default-language: Haskell2010
